# zvcs

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
completions/: _git
docs/: _config.yml  hud-theme.js  index.html  port_report.html  report.html
scripts/: gen_grammars.pl  split_failures.pl  wire_dispatch.pl
src/extensions/: Cargo.toml  build.rs
src/extensions/src/: abbrev.rs  advice.rs  alias.rs  autocorrect.rs  autostart.rs  config.rs  crawler.rs  date.rs  db.rs  dispatch.rs  external.rs  hooks.rs  index_commit.rs  jobpool.rs  jobrun.rs  lib.rs  lock.rs  main.rs  merge_apply.rs  pager.rs  porcelain.rs  revfilter.rs  superset.rs  worktree.rs
src/extensions/src/porcelain/: add.rs  am.rs  annotate.rs  apply.rs  archimport.rs  archive.rs  backfill.rs  bisect.rs  blame.rs  branch.rs  bugreport.rs  bundle.rs  cat_file.rs  check_attr.rs  check_ignore.rs  check_mailmap.rs  check_ref_format.rs  checkout.rs  checkout__worker.rs  checkout_index.rs  cherry.rs  cherry_pick.rs  clean.rs  clone.rs  color.rs  column.rs  commit.rs  commit_graph.rs  commit_tree.rs  config.rs  count_objects.rs  credential.rs  credential_cache.rs  credential_cache__daemon.rs  credential_netrc.rs  credential_osxkeychain.rs  credential_store.rs  cvsexportcommit.rs  cvsimport.rs  cvsserver.rs  (+144 more)
src/extensions/src/superset/: analytics.rs  attach.rs  banner.rs  claim.rs  coord.rs  dashed.rs  doctor.rs  gitls.rs  hooks.rs  ledger.rs  lscolors.rs  manpage.rs  mod.rs  oplog.rs  pmutate.rs  query.rs  queue.rs  reconcile.rs  repl.rs  select.rs  shell.rs  snapshot.rs  status.rs  statusd.rs  trigger.rs  watch.rs  zbump.rs  zdaemon.rs  zforeach.rs  zhook.rs  zstash.rs  zsync.rs  zup.rs  zworktree.rs
src/extensions/tests/: add_config.rs  advice.rs  alias.rs  am_config.rs  analytics.rs  annotate_porcelain.rs  apply_config.rs  archive_config.rs  attach.rs  autocorrect.rs  autocrawl.rs  autonomy.rs  blame_config.rs  branch_config.rs  checkout_options.rs  claim.rs  claim_force.rs  clean.rs  clone_config.rs  color_config.rs  column_config.rs  commit_editor.rs  commit_graph_config.rs  coordination.rs  crawler_edge.rs  credential_config.rs  daemon_ctl.rs  daemon_race.rs  describe_config.rs  diff_config.rs  diff_plumbing_config.rs  dup_fanout.rs  edge_cases.rs  external_dispatch.rs  fmt_merge_msg_config.rs  for_each_ref_version_stdin.rs  format_config.rs  fsops.rs  gc_config.rs  gc_reflog_expire.rs  (+74 more)
src/parity/: Cargo.toml
src/parity/grammars/: am.json  annotate.json  apply.json  archive.json  backfill.json  bisect.json  bundle.json  check-attr.json  check-ignore.json  check-mailmap.json  check-ref-format.json  cherry-pick.json  cherry.json  clean.json  column.json  commit-graph.json  commit-tree.json  count-objects.json  credential-cache--daemon.json  credential-cache.json  credential-netrc.json  credential-osxkeychain.json  credential-store.json  credential.json  daemon.json  diff-files.json  diff-index.json  diff-tree.json  difftool.json  fast-export.json  fast-import.json  fetch-pack.json  fmt-merge-msg.json  for-each-ref.json  format-patch.json  fsck-objects.json  fsck.json  fsmonitor--daemon.json  gc.json  grep.json  (+67 more)
src/parity/src/: corpus.rs  env.rs  fixture.rs  fuzz.rs  grammars_generated.rs  main.rs  report.rs  runner.rs
src/ported/: Cargo.toml
src/ported/gix/: Cargo.toml
src/ported/gix-index/src/extension/: resolve_undo.rs
src/ported/gix-merge/src/tree/: utils.rs
src/ported/gix-pack/src/index/: mod.rs
src/ported/gix-pack/src/index/write/: mod.rs  reverse.rs
src/ported/gix-path/src/env/: mod.rs
src/ported/gix-path/src/env/git/: mod.rs
src/ported/gix-worktree-state/src/checkout/: entry.rs
