[package]
name = "zvcs"
description = "git-shadowing superset VCS: the shadow `git` binary and coordination layer"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

# The engine as a library, so integration tests can drive it directly.
[lib]
name = "zvcs"
path = "src/lib.rs"

# The one and only binary: `git`. It shadows stock git on PATH and serves every
# subcommand natively via the vendored gitoxide crates — no fork/exec of old git.
[[bin]]
name = "git"
path = "src/main.rs"

[dependencies]
# Vendored gitoxide, in-tree at src/ported. Default features include sha1 + max-performance.
# blocking-http-transport-reqwest-rust-tls enables blocking fetch over https with a
# pure-Rust TLS stack (no curl/openssl C toolchain) — used by zsync's reconcile.
# `merge` backs merge-tree/merge-file; it pulls in tree-editor + blob-diff.
gix = { path = "../ported/gix", features = [
    "blocking-http-transport-reqwest-rust-tls",
    "tree-editor",
    "merge",
] }
anyhow = "1"
# File-watch autonomy: the daemon reacts to local ref changes (a `git pull`/commit
# updates `logs/HEAD` / remote-tracking refs) and never polls a remote.
notify = "6"
# Job ledger + repo index. Bundled SQLite for cross-arch reproducibility
# (macOS aarch64 / Linux x86_64+aarch64); WAL, single daemon writer thread.
rusqlite = { version = "0.31", features = ["bundled"] }
# Fast parallel filesystem walk for the repo crawler (whole-device `.git` scan).
ignore = "0.4"
# Job spec encoding over the daemon socket (async z-verbs).
serde_json = "1"
