[package]
name = "zvcs"
description = "git-shadowing superset VCS: the shadow `git` binary and coordination layer"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

# The engine as a library, so integration tests can drive it directly.
[lib]
name = "zvcs"
path = "src/lib.rs"

# The one and only binary: `git`. It shadows stock git on PATH and serves every
# subcommand natively via the vendored gitoxide crates — no fork/exec of old git.
[[bin]]
name = "git"
path = "src/main.rs"

[dependencies]
# Vendored gitoxide, in-tree at src/ported. Default features include sha1 + max-performance.
# blocking-http-transport-reqwest-rust-tls enables blocking fetch over https with a
# pure-Rust TLS stack (no curl/openssl C toolchain) — used by zsync's reconcile.
# `merge` backs merge-tree/merge-file; it pulls in tree-editor + blob-diff.
gix = { path = "../ported/gix", features = [
    "blocking-http-transport-reqwest-rust-tls",
    "tree-editor",
    "merge",
] }
# Clone progress rendering. gitoxide already depends on prodash 31.0.0 (registry)
# and drives fetch/checkout through its progress traits; enabling the line
# renderer here (features unify with gix's copy) lets `git clone` show the remote
# sideband progress + local receive/resolve/checkout status to stderr, like git.
prodash = { version = "31.0.0", features = [
    "render-line",
    "render-line-crossterm",
    "render-line-autoconfigure",
    "progress-tree",
    "unit-bytes",
    "unit-human",
] }
anyhow = "1"
# POSIX-ERE value-pattern matching for `git config <name> <value> <value-pattern>`.
# Foundational, vendorable crate; byte-oriented `regex::bytes` mirrors git's regexec.
regex = "1"
# File-watch autonomy: the daemon reacts to local ref changes (a `git pull`/commit
# updates `logs/HEAD` / remote-tracking refs) and never polls a remote.
notify = "6"
# Job ledger + repo index. Bundled SQLite for cross-arch reproducibility
# (macOS aarch64 / Linux x86_64+aarch64); WAL, single daemon writer thread.
rusqlite = { version = "0.31", features = ["bundled"] }
# Fast parallel filesystem walk for the repo crawler (whole-device `.git` scan).
ignore = "0.4"
# Job spec encoding over the daemon socket (async z-verbs).
serde_json = "1"
# Terminal paging: dup2/isatty/close to splice the pager onto fd 1/2, as git does.
libc = "0.2"
